--- a/src/content/astro/2.mdx
+++ b/src/content/astro/2.mdx
@@ -1,11 +1,9 @@
 ---
-description: Thinking about the Silicon Valley Bank episode, nobody and especially retail customers would ever want to get into similar situation.
-image: https://internetstore.b-cdn.net/mohit/takeway-from-silicon-valley-bank-episode.png
-publish_date: 03/14/2023
-tags: "Joi,JavaScript"
-title: Takeway from Silicon Valley Bank episode
-update_date: 03/14/2023
-url: joi
+title: Adding Google Analytics to Astro
+publish_date: 07/10/2023
+update_date: 07/10/2023
+description: How to add Adding Google Analytics to Astro
+url: adding-google-analytics-to-astro
 ---
 Since Astro supports Scripts tag, this should be fairly simple. Just paste the entire Google Analytics Script tag in the file which common in your platform and you are good to go.
 
@@ -21,4 +19,3 @@ I have added it inside my header component as it is one common piece on the webs
     gtag('config', 'G-90J0SNHXVV');
 </script>
 ```
-## Hwllo World
