--- a/src/content/astro/1.mdx
+++ b/src/content/astro/1.mdx
@@ -19,3 +19,5 @@ I have added it inside my header component as it is one common piece on the webs
     gtag('config', 'G-90J0SNHXVV');
 </script>
 ```
+\
+View on [YouTube Link](https://abc.com)
