--- a/src/content/mysql/adding-timestamp-on-record-update-and-insert.mdx
+++ b/src/content/mysql/adding-timestamp-on-record-update-and-insert.mdx
@@ -16,7 +16,7 @@ ADD COLUMN created_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP;
 ```
 
 Adding `update_at` column.
-```
+```mysql
 ALTER TABLE table_name
 ADD COLUMN update_at TIMESTAMP NOT NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP;
 ```
