--- a/src/content/blogs/3.mdx
+++ b/src/content/blogs/3.mdx
@@ -1,8 +1,8 @@
 ---
-description: Thinking about the Silicon Valley Bank episode, nobody and especially retail customers would ever want to get into similar situation.
+description: Disable dates on Shadcn UI Calendar Component and React Day Picker.
 image: https://internetstore.b-cdn.net/mohit/takeway-from-silicon-valley-bank-episode.png
 publish_date: 03/22/2024
-tags: "React, Shadcn UI, React Day Picker"
+tags: "React,Shadcn UI,React Day Picker"
 title: Disable dates on Shadcn UI Calendar Component and React Day Picker
 update_date: 03/22/2024
 url: disable-dates-on-shadcn-ui-calendar-component-and-react-day-picker
