--- a/src/content/blogs/2.mdx
+++ b/src/content/blogs/2.mdx
@@ -3,7 +3,7 @@ description: Thinking about the Silicon Valley Bank episode, nobody and especial
 image: https://internetstore.b-cdn.net/mohit/takeway-from-silicon-valley-bank-episode.png
 publish_date: 03/14/2023
 tags: "cloudflare"
-title: redirect-domain-from-root-to-www-subdomain-through-cloudflare
+title: Redirect domain from root to www subdomain through cloudflare
 update_date: 03/14/2023
 url: redirect-domain-from-root-to-www-subdomain-through-cloudflare
 ---
