--- a/src/content/blogs/1.mdx
+++ b/src/content/blogs/1.mdx
@@ -6,6 +6,7 @@ tags: "Joi,JavaScript"
 title: Takeway from Silicon Valley Bank episode
 update_date: 03/14/2023
 url: joi
+is_published: false
 ---
 Since Astro supports Scripts tag, this should be fairly simple. Just paste the entire Google Analytics Script tag in the file which common in your platform and you are good to go.
 
