--- a/src/content/blogs/3.mdx
+++ b/src/content/blogs/3.mdx
@@ -6,6 +6,7 @@ tags: "React,Shadcn UI,React Day Picker,Date-FNS"
 title: Disable dates on Shadcn UI Calendar Component and React Day Picker
 update_date: 03/22/2024
 url: disable-dates-on-shadcn-ui-calendar-component-and-react-day-picker
+is_published: true
 ---
 1. Specific dates can be disabled using an array.
 ```js
