--- a/src/content/blogs/6.mdx
+++ b/src/content/blogs/6.mdx
@@ -10,6 +10,6 @@ tags: "PostgreSQL"
 This is how PostgreSQL is different from MySQL.
 You have to cast the date string using ```::date```
 
-```mysql
-select field from table where some_date >= '2024-03-28'::date;
+```js
+SELECT field FROM table WHERE some_date >= '2024-03-28'::date;
 ```
